--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,11 @@
 </div>
 
 <div *ngIf="isReady()">
+    <app-gateway-title-component></app-gateway-title-component>
     <app-gateway-status-component [onlineStatus]="this.model.status.onlineStatus"></app-gateway-status-component>    
     <app-gateway-commands-component></app-gateway-commands-component>   
+    <app-gateway-message-component></app-gateway-message-component>
+    <app-gateway-message-list-component></app-gateway-message-list-component>
 </div> 
 
 
