--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import 'https://fonts.googleapis.com/css?family=Share+Tech+Mono';
 @import 'https://fonts.googleapis.com/css?family=Roboto';
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
   
 .basic-container {
     padding: 5px;
@@ -20,7 +20,8 @@
 body { 
     margin: 0; 
     font-family: Arial, Helvetica, sans-serif; 
-    overflow: hidden;
+    overflow: hidden; 
+    background-color: #000000;
 }
 
 canvas { width: 100%; height: 100% }
@@ -122,6 +123,18 @@ cobalt-progress
     margin-left: 10px;
 }
 
+app-gateway-title-component {
+    position: absolute; 
+    display: block; 
+    top:5px;
+    right:310px;
+    left:310px;
+    height:80px;
+    padding: 5px 5px 5px 5px;
+    z-index: 3;
+    background: rgba(100, 100, 100, 0.5)
+}
+
 app-gateway-status-component {
     position: absolute; 
     display: block; 
@@ -132,6 +145,44 @@ app-gateway-status-component {
     padding: 5px 5px 5px 5px;
     z-index: 3;
     background: rgba(100, 100, 100, 0.5)
+}
+
+app-gateway-message-component {
+    position: absolute; 
+    display: block; 
+    height: 300px;
+    bottom:10px;
+    right:310px;
+    left:310px;
+    padding: 5px 5px 5px 5px;
+    z-index: 3;
+    background: rgba(100, 100, 100, 0.5)
+}
+
+app-gateway-commands-component {
+    position: absolute;
+    display: block;
+    top: 360px;
+    right: 5px;
+    /* height: 250px;*/
+    width: 300px;    
+    bottom: 10px;    
+    z-index: 3;
+    padding: 5px 5px 5px 5px;
+    background:  rgba(100, 100, 100, 0.5)
+}
+
+app-gateway-message-list-component {
+    position: absolute;
+    display: block;
+    top: 90px;
+    right: 310px;
+    /* height: 250px;*/
+    left: 5px;    
+    bottom: 360px;    
+    z-index: 3;
+    padding: 5px 5px 5px 5px;
+    background:  rgba(100, 100, 100, 0.5)
 }
 
 app-cobalt-file-dialog {
@@ -156,19 +207,6 @@ app-cobalt-zoom-direction{
     z-index: 3;
     padding: 5px 5px 5px 5px;
     background:  rgba(100, 100, 100, 0.5);    
-}
-
-app-gateway-commands-component {
-    position: absolute;
-    display: block;
-    top: 360px;
-    right: 5px;
-    /* height: 250px;*/
-    width: 300px;    
-    bottom: 10px;    
-    z-index: 3;
-    padding: 5px 5px 5px 5px;
-    background:  rgba(100, 100, 100, 0.5)
 }
 
 app-cobalt-control-mode-panel{
@@ -615,5 +653,25 @@ div.manMinusZ:active {
     position: absolute;
     bottom: 5px;
     left: 255px;   
+    border-radius: 4px;     
+}
+
+div.sendJson {
+    background-image:url("./theme/manMinZ.jpg");
+    width: 120px;
+    height: 60px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;    
+    border-radius: 4px;
+}
+
+div.sendJson:active {
+    background-image:url("./theme/manMinZ-press.jpg");
+    width: 120px;
+    height: 60px;
+    position: absolute;
+    bottom: 5px;
+    right: 5px;   
     border-radius: 4px;     
 }
