--- a/src/component/gateway.status.component.html
+++ b/src/component/gateway.status.component.html
@@ -34,3 +34,13 @@
     <div class="diod-online-off"></div>
     <div class="text-online">off-line</div>
 </div>
+
+
+<div class="statusText"> 
+    <br>
+    <p><b>Version:</b>&nbsp;{{this.gwmVersion}}</p>
+    <p><b>Last update:</b>&nbsp;{{this.gwmLastupdate}}</p>
+    <p><b>API Version:</b>&nbsp;{{this.apiVersion}}</p>
+    <p><b>WS Server:</b>&nbsp;{{this.wsserver}}</p>
+    <p><b>WS Protocol:</b>&nbsp;{{this.wsprotocol}}</p>
+</div>
