--- a/src/component/gateway.status.component.html
+++ b/src/component/gateway.status.component.html
@@ -41,6 +41,6 @@
     <p><b>Version:</b>&nbsp;{{this.gwmVersion}}</p>
     <p><b>Last update:</b>&nbsp;{{this.gwmLastupdate}}</p>
     <p><b>API Version:</b>&nbsp;{{this.apiVersion}}</p>
-    <p><b>WS Server:</b>&nbsp;{{this.wsserver}}</p>
-    <p><b>WS Protocol:</b>&nbsp;{{this.wsprotocol}}</p>
+    <p><b>WS Server:</b>&nbsp;{{this.wsServer}}</p>
+    <p><b>WS Protocol:</b>&nbsp;{{this.wsProtocol}}</p>
 </div>
