--- a/src/component/gateway.message.list.component.html
+++ b/src/component/gateway.message.list.component.html
@@ -14,18 +14,18 @@
             </thead>
         -->
             <tbody>
-                <tr *ngFor="let msg of model.msgArray.slice().reverse(); let i = index">
+                <tr *ngFor="let msg of model.msgArray; let i = index">
                       <!--  <td><p><span class="tableText">{{msg.json.mType}}</span></p></td> -->
                      <!--   <td><p><span class="tableText">{{msg.str}}</span></p></td> -->
                         <mat-expansion-panel>
                             <mat-expansion-panel-header>
                               <mat-panel-title><b>No:</b>&nbsp;{{i+1}}</mat-panel-title>
-                              <mat-panel-description> <b>mType:</b>&nbsp;{{msg.json.mType}}</mat-panel-description>                        
-                              <mat-panel-description> <b>Status:</b>&nbsp;{{msg.json.data.status}}</mat-panel-description>  
+                              <mat-panel-description *ngIf="msg.resp"> <b>mType:</b>&nbsp;{{msg.resp.mType}}</mat-panel-description>
+                              <mat-panel-description *ngIf="msg.resp"> <b>Status:</b>&nbsp;{{msg.resp.data.status}}</mat-panel-description>  
                             </mat-expansion-panel-header>
                         
-                            <p><font size="2"><b>request:</b> {{msg.strReq}}</font></p>
-                            <p><font size="2"><b>response:</b>{{msg.str}}</font></p>
+                            <p><font size="2"><b>request:</b> {{model.msgString(msg.req)}}</font></p>                            
+                            <p><font size="2"><b>response:</b>{{model.msgString(msg.resp)}}</font></p>
                         
                             <!--
                             <mat-form-field>
