--- a/src/component/gateway.msg.container.component.html
+++ b/src/component/gateway.msg.container.component.html
@@ -1,19 +1,16 @@
 <div class="title">
     Message...
 </div>
+<!--
 <div class="content" style="margin-left: 5px; margin-top: 20px;">
     <mat-form-field  class="selector-full-width">
         <mat-select placeholder="Message modes..." (change)="OnControlModeClick($event)" [(ngModel)]="this.mode">
-            <!--
-            <mat-option [value] = 0>{{this.msgList.messages[0]}}</mat-option>
-            <mat-option [value] = 1>{{this.msgList.messages[1]}}</mat-option>
-            -->
             <mat-option *ngFor="let mode of this.modeList; let i = index" [value]="i">
                 {{ mode }}
             </mat-option>
         </mat-select>
     </mat-form-field>
-</div>
+</div> -->
 
 <div *ngIf="this.mode == 0">
     <app-gateway-msg-plain-component></app-gateway-msg-plain-component>
