--- a/src/component/gateway.msg.conc.component.html
+++ b/src/component/gateway.msg.conc.component.html
@@ -2,8 +2,8 @@
 <div class="concIqrf"></div>
 
 <div class="content" style="margin-left: 15px; margin-top: 35px;">
-    <mat-slide-toggle (change)="OnLedG($event)" [checked]="this.ledg">LED Green</mat-slide-toggle>
-    <mat-slide-toggle (change)="OnLedR($event)" [checked]="this.ledr">LED Red</mat-slide-toggle>
-    <div *ngIf="this.ledg" class="ledg-on"></div>
-    <div *ngIf="this.ledr" class="ledr-on"></div>
+    <mat-slide-toggle (change)="OnLedG($event)" [(ngModel)]="this.model.coordinator.switchG">LED Green</mat-slide-toggle>
+    <mat-slide-toggle (change)="OnLedR($event)" [(ngModel)]="this.model.coordinator.switchR">LED Red</mat-slide-toggle>
+    <div *ngIf="this.model.coordinator.getLedG()" class="ledg-on"></div>
+    <div *ngIf="this.model.coordinator.getLedR()" class="ledr-on"></div>
 </div>
