gw scenarios support

--- a/src/component/gateway.scenario.component.html
+++ b/src/component/gateway.scenario.component.html
@@ -3,37 +3,32 @@
 </div>
 
 <div class="row" style="padding:10px;">
-    <div class="column left" style="padding:10px; background-color: rgb(49, 49, 153);">
+    <!--Column-->
+    <div class="column left" style="padding:10px;">
+        <div class="example-container" >
+                <form class="example-form" [formGroup]="form">      
+                        <mat-form-field class="example-full-width">
+                            <textarea matInput rows="15" placeholder="Enter Java Script:" formControlName="text"></textarea>
+                        </mat-form-field>    
+                    </form>
 <!--
-        <div class="sd2" style="width: 350px; ">  
-            <form class="example-form" >      
-                <mat-form-field class="example-full-width">
-                    <textarea matInput rows="15" placeholder="Enter JSON:" ></textarea>
-                </mat-form-field>    
-            </form>
-        </div>
-    -->
-    <div class="example-container" >
             <mat-form-field class="example-full-width">
                     <textarea matInput rows="15" placeholder="Enter JSON:" ></textarea>
             </mat-form-field>
- 
-          </div>
-
-
+        -->
+        </div>
     </div>
+    <!--Column-->
     <div class="column right" style="padding:10px;">
         <div class="content" style="margin-left: 5px; margin-top: 10px;">
             <mat-form-field  class="selector-full-width">
-                <mat-select placeholder="Available scenarios..." (change)="OnScriptSelect($event)" [(ngModel)]="this.mode">
-                    
-                    <mat-option *ngFor="let scenario of this.model.scenarioList.scenarios; let i = index" [value]="i">
+                <mat-select placeholder="Available scenarios..." (change)="OnScriptSelect($event)" [(ngModel)]="this.mode">                    
+                    <mat-option *ngFor="let scenario of this.model.scenarioList.list; let i = index" [value]="i">
                         {{ scenario.name }}
-                    </mat-option>
-                
+                    </mat-option>                
                 </mat-select>
             </mat-form-field>
-            <button mat-button type="submit">Submit</button>
+            <button mat-button type="submit" (click)="submit()">Submit</button>
             <button mat-button type="button" (click)="reset()" >Clear</button>           
         </div>                    
     </div>
