--- a/src/component/gateway.status.component.html
+++ b/src/component/gateway.status.component.html
@@ -44,3 +44,7 @@
     <p><b>WS Server:</b>&nbsp;{{this.wsServer}}</p>
     <p><b>WS Protocol:</b>&nbsp;{{this.wsProtocol}}</p>
 </div>
+<img src="./theme/IOT-logo.png" alt="Lights" style="width:80%"> 
+<br>
+<br>
+<img src="./theme/Logimic_logo_full.png" alt="Lights" style="width:50%"> 
